--- a/format.css
+++ b/format.css
@@ -1,3 +1,5 @@
+/*Início Arquivo index*/
+
 body {
     background-color: #D2D6D9;
     display: flex;
@@ -117,4 +119,39 @@ h1 {
     width: 70px;
     height: 70px;
     border: 3px solid white;
+}
+
+/*Fim Arquivo index*/
+
+
+/*Início Arquivo gravarValor*/
+
+.fundoValor {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: 7%;
+
+    width: 100%;
+    height: 13%;
+    background-color: white;
+}
+
+#valor {
+    font-family: 'Ubuntu';
+    font-weight: bold;
+    font-size: 350%;
+    color: #228B22;
+
+    text-align: center;
+}
+
+.linhaRadio {
+    display: inline-flex;
+    justify-content: center;
+}
+
+.radios {
+    font-family: 'Ubuntu';
+    font-weight: bold;
 }
